package behavioral.state.cf3;

public interface CalculatorState {
    boolean operateHandle(Calculator calculator);
}
